WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235697
<model> should not be draggable on macOS
https://bugs.webkit.org/show_bug.cgi?id=235697
Summary
<model> should not be draggable on macOS
Antoine Quint
Reported
2022-01-27 01:07:27 PST
<model> should only be draggable on iOS
Attachments
Patch
(7.17 KB, patch)
2022-01-27 01:12 PST
,
Antoine Quint
dino
: review+
Details
Formatted Diff
Diff
Patch for landing
(7.16 KB, patch)
2022-01-27 12:59 PST
,
Antoine Quint
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2022-01-27 01:12:53 PST
Created
attachment 450114
[details]
Patch
Antoine Quint
Comment 2
2022-01-27 01:13:24 PST
We're turning off <model> dragging for macOS in
bug 227621
.
Antoine Quint
Comment 3
2022-01-27 01:27:48 PST
Please ignore that last comment, it was a mistake.
Antoine Quint
Comment 4
2022-01-27 03:08:51 PST
Committed
r288670
(
246476@trunk
): <
https://commits.webkit.org/246476@trunk
>
Radar WebKit Bug Importer
Comment 5
2022-01-27 03:09:17 PST
<
rdar://problem/88123683
>
Aakash Jain
Comment 6
2022-01-27 11:34:21 PST
(In reply to Antoine Quint from
comment #4
)
> Committed
r288670
(
246476@trunk
): <
https://commits.webkit.org/246476@trunk
>
This manual commit broke an iOS api test. See:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.DragAndDropTests.CanStartDragOnModel
EWS failure:
https://ews-build.webkit.org/#/builders/9/builds/63450
This is now slowing down the api-ios ews queue.
WebKit Commit Bot
Comment 7
2022-01-27 12:05:35 PST
Re-opened since this is blocked by
bug 235725
Antoine Quint
Comment 8
2022-01-27 12:59:16 PST
Created
attachment 450167
[details]
Patch for landing
Antoine Quint
Comment 9
2022-01-27 22:54:11 PST
Committed
r288723
(
246516@trunk
): <
https://commits.webkit.org/246516@trunk
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug