<model> should only be draggable on iOS https://bugs.webkit.org/show_bug.cgi?id=235697

Reviewed by Dean Jackson.

Source/WebCore:

As part of bug 229246 we added support for dragging <model> elements. However, it only
worked on iOS in practice so we make that explicit so that other platforms that do not
have complete support for <model> dragging do not have that feature.

This is also important leading up to bug 227621, where we'll implement the "interactive"
HTML attribute and IDL property, since disabling dragging over a <model> element to adjust
the camera would trigger a crash under Pasteboard::write() on macOS due to not having an
image set on the pasteboard data.

* Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::supportsDragging const):
(WebCore::HTMLModelElement::isDraggableIgnoringAttributes const):
* Modules/model-element/HTMLModelElement.h:
* Modules/model-element/ModelPlayer.cpp:
(WebCore::ModelPlayer::supportsDragging):
* Modules/model-element/ModelPlayer.h:
* page/DragController.cpp:
(WebCore::modelElementIsDraggable):

Source/WebKit:

Override the ModelPlayer method to enable <model> dragging on iOS.

* WebProcess/Model/ios/ARKitInlinePreviewModelPlayerIOS.h:
* WebProcess/Model/ios/ARKitInlinePreviewModelPlayerIOS.mm:
(WebKit::ARKitInlinePreviewModelPlayerIOS::supportsDragging):


Canonical link: https://commits.webkit.org/246476@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288670 268f45cc-cd09-0410-ab3c-d52691b4dbfc