Source/WebKit/WebProcess/Model/ios/ARKitInlinePreviewModelPlayerIOS.mm
@@ -61,6 +61,11 @@ std::optional<ModelIdentifier> ARKitInlinePreviewModelPlayerIOS::modelIdentifier
 
 // MARK: - WebCore::ModelPlayer overrides.
 
+bool ARKitInlinePreviewModelPlayerIOS::supportsDragging()
+{
+    return true;
+}
+
 void ARKitInlinePreviewModelPlayerIOS::enterFullscreen()
 {
     RefPtr strongPage = page();
